2004-12-22 Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/ReportOptions.py (ReportOptions): Add base Options class.
	* src/plugins/BookReport.py (BookOptions): Derive from base class.
	* src/plugins/TimeLine.py (TimeLineOptions): Derive from base class.
	* src/plugins/FtmStyleDescendants.py (FtmDescendantOptions):
	Derive from base class.

	* src/PeopleModel.py (PeopleModel.__init__): Make data_filter optional.
	* src/plugins/FtmStyleAncestors.py: Convert to new scheme.
	* src/plugins/AncestorReport.py: Convert to new scheme.
	* src/plugins/DescendReport.py: Convert to new scheme.
	* src/plugins/IndivSummary.py: Convert to new scheme.

	* src/Plugins.py: Fix Reports menu.

2004-12-21 Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/docgen/AsciiDoc.py (reformat_para): Correctly check for
	empty paragraph.

	* src/ArgHandler.py: Pass category on to CL task.
	* src/Report.py: Handle showing options centrally.
	* src/plugins/BookReport.py: Handle showing options centrally.
	* src/plugins/TimeLine.py: Handle showing options centrally.
	* src/plugins/FtmStyleDescendants.py: Handle showing options centrally.

	* various: Merge REP_OPT branch with HEAD.

	* src/Plugins.py: Sort out name and translated name.
	* src/Report.py: Sort out name and translated name.
	* src/gramps_main.py: Sort out name and translated name.
	* src/plugins/BookReport.py: Sort out name and translated name.

2004-12-20 Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/ArgHandler.py: Single out Book by category.
	* src/Plugins.py: Use category to register cl report.
	* src/Report.py: Support template; make template file selector modal;
	change key for orientation.
	* src/ReportOptions.py: Add get/save template support.
	* src/plugins/BookReport.py: Reinstate command line mode.
	* src/plugins/TimeLine.py: Clean up; add docstrings;
	avoid possible conflicts with dialog's contents.
	* src/plugins/FtmStyleDescendants.py: Convert to present scheme.
