@@ -88,11 +88,11 @@ class FtmAncestorReport(Report.Report):
         self.map = {}
 
         (self.max_generations,self.pgbrk) \
-                        = options_class.handler.get_report_generations()
+                        = options_class.get_report_generations()
 
-        self.doc = options_class.handler.doc
-        output = options_class.handler.output
-        self.newpage = options_class.handler.newpage
+        self.doc = options_class.get_document()
+        output = options_class.get_output()
+        self.newpage = options_class.get_newpage()
 
         if output:
             self.standalone = 1
