@@ -86,9 +86,9 @@ class IndivSummary(Report.Report):
         self.options_class = options_class
 
 
-        self.d = options_class.handler.doc
-        self.output = options_class.handler.output
-        self.newpage = options_class.handler.newpage
+        self.d = options_class.get_document()
+        self.output = options_class.get_output()
+        self.newpage = options_class.get_newpage()
 
         c = database.get_researcher().get_name()
         self.d.creator(c)
